--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <openapi-ui.version>2.0.4</openapi-ui.version>
         <jackson-annotations.version>2.14.2</jackson-annotations.version>
         <hutool.version>5.8.16</hutool.version>
+        <tk.mybatis.version>4.2.2</tk.mybatis.version>
     </properties>
     <dependencies>
 
@@ -57,6 +58,11 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>${tk.mybatis.version}</version>
         </dependency>
 
         <!-- 接口UI -->
@@ -143,6 +149,30 @@
                         <groupId>io.swagger.parser.v3</groupId>
                         <artifactId>swagger-parser</artifactId>
                         <version>2.1.12</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.4.2</version>
+                 <configuration>
+                    <!-- generator 工具配置文件的位置 -->
+                    <configurationFile>${basedir}/src/main/resources/db/generator/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite>
+                    <verbose>true</verbose>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mysql</groupId>
+                        <artifactId>mysql-connector-j</artifactId>
+                        <version>8.0.32</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>4.2.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
