--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ gen/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-src/main/java/resources/generated/**
+src/main/resources/generated/
 
 ### STS ###
 .apt_generated
