--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <pagehelper.version>1.3.1</pagehelper.version>
         <freemarker.version>2.3.32</freemarker.version>
+        <easyexcel.version>3.2.1</easyexcel.version>
     </properties>
     <dependencies>
 
@@ -111,6 +112,13 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>${freemarker.version}</version>
+        </dependency>
+
+        <!-- excel-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
         </dependency>
 
 
