--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -15,3 +15,6 @@ spring:
     change-log: classpath:/db/liquibase/changelog.xml
 
 
+mybatis:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
