--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,7 @@ pagehelper:
   helper-dialect: mysql
   reasonable: true
   supportMethodsArguments: true
+
+logging:
+  level:
+    wang.diff.user.server.dao: DEBUG # 看sql
