--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <pagehelper.version>1.3.1</pagehelper.version>
         <freemarker.version>2.3.32</freemarker.version>
         <easyexcel.version>3.2.1</easyexcel.version>
+        <s3.version>1.12.441</s3.version>
     </properties>
     <dependencies>
 
@@ -120,6 +121,15 @@
             <artifactId>easyexcel</artifactId>
             <version>${easyexcel.version}</version>
         </dependency>
+
+        <!-- object store -->
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${s3.version}</version>
+        </dependency>
+
 
 
 
