--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <pagehelper.version>1.3.1</pagehelper.version>
         <freemarker.version>2.3.32</freemarker.version>
         <easyexcel.version>3.2.1</easyexcel.version>
-        <s3.version>1.12.441</s3.version>
+        <minio.version>8.5.2</minio.version>
     </properties>
     <dependencies>
 
@@ -123,11 +123,10 @@
         </dependency>
 
         <!-- object store -->
-        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-s3</artifactId>
-            <version>${s3.version}</version>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
         </dependency>
 
 
