--- a/src/main/resources/application-redis.yml
+++ b/src/main/resources/application-redis.yml
@@ -2,7 +2,13 @@ spring:
   data:
     redis:
       host: 192.168.226.136
+      port: 6379
       database: 0
       username:
       password:
-      
+      lettuce:
+        pool:
+          enabled: true
+          max-active: 8
+
+
