--- a/src/main/resources/application-kafka.yml
+++ b/src/main/resources/application-kafka.yml
@@ -3,5 +3,5 @@ spring:
     bootstrap-servers: "192.168.226.136:9092"
     consumer:
       group-id: "spring-kafka"
-      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
-
+#      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
