--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -11,7 +11,7 @@ spring:
       max-lifetime: 540000
       connection-timeout: 60000
   liquibase:
-    enabled: true
+    enabled: false
     change-log: classpath:/db/liquibase/changelog.xml
 
 
