--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>wang.diff</groupId>
@@ -15,14 +15,15 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
-        <openapi-ui.version>2.0.4</openapi-ui.version>
+        <openapi-ui.version>2.1.0</openapi-ui.version>
         <jackson-annotations.version>2.14.2</jackson-annotations.version>
         <hutool.version>5.8.16</hutool.version>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
-        <pagehelper.version>1.3.1</pagehelper.version>
+        <pagehelper.version>1.4.6</pagehelper.version>
         <freemarker.version>2.3.32</freemarker.version>
         <easyexcel.version>3.2.1</easyexcel.version>
         <minio.version>8.5.2</minio.version>
+        <jjwt.version>0.11.5</jjwt.version>
     </properties>
     <dependencies>
 
@@ -43,6 +44,31 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
 
         <!-- 与数据库相关 -->
         <dependency>
