--- a/src/main/resources/apis/apis.yml
+++ b/src/main/resources/apis/apis.yml
@@ -58,6 +58,7 @@ paths:
         - send-msg
       summary: send msg code
       description: send msg code api
+      operationId: sendMsgCode
       requestBody:
         content:
           application/json:
@@ -177,7 +178,7 @@ paths:
           #       type: string
           #       format: binary
 
-  /session:
+  /session/login:
     post:
       tags:
         - session
@@ -196,6 +197,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BaseResp'
+      security: []
+
   /user:
     post:
       tags:
@@ -313,7 +316,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/BaseRespWithEffectiveCount'
 
-
 components:
   # common parameters
   parameters:
@@ -350,11 +352,6 @@ components:
           type: integer
           format: int32
     OnePageData:
-      # 启用这块只是为有个统一的page转换器
-      # discriminator:
-      #   propertyName: for_inheritance
-      #   mapping:
-      #     UserPageDTO: '#/components/schemas/UserPageDTO'
       type: object
       properties:
         pagination:
@@ -493,5 +490,12 @@ components:
           type: string
           format: date-time
           description: create time
-          
-          
+  # 1) Define the security scheme type (HTTP bearer)
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+# 2) Apply the security globally to all operations
+security:
+  - bearerAuth: []
